y.output
Grammar

    0 $accept: CompUnit $end

    1 CompUnit: CompUnit Decl
    2         | CompUnit FuncDef
    3         | Decl
    4         | FuncDef

    5 Decl: ConstDecl TOK_SEMICOLON
    6     | VarDecl TOK_SEMICOLON

    7 BType: TOK_INT
    8      | TOK_FLOAT

    9 ConstDecl: TOK_CONST BType ConstDef
   10          | ConstDecl TOK_COMMA ConstDef

   11 VarDecl: BType VarDef
   12        | VarDecl TOK_COMMA VarDef

   13 VarDef: VarDefSingle
   14       | VarDefArray

   15 VarDefSingle: IDENT TOK_ASSIGN InitVal
   16             | IDENT

   17 VarDefArray: DefArrayBody TOK_ASSIGN InitValArray
   18            | DefArrayBody

   19 DefArrayBody: DefArrayBody TOK_LBRACKET Exp TOK_RBRACKET
   20             | IDENT TOK_LBRACKET Exp TOK_RBRACKET

   21 ConstDef: ConstDefSingle
   22         | ConstDefArray

   23 ConstDefSingle: IDENT TOK_ASSIGN InitVal

   24 ConstDefArray: DefArrayBody TOK_ASSIGN InitValArray

   25 InitVal: AddExp

   26 InitValArray: TOK_LBRACE InitValArrayBody TOK_RBRACE
   27             | TOK_LBRACE TOK_RBRACE

   28 InitValArrayBody: InitValArrayBody TOK_COMMA InitValArray
   29                 | InitValArrayBody TOK_COMMA InitVal
   30                 | InitValArray
   31                 | InitVal

   32 Exp: AddExp

   33 LOrExp: LOrExp TOK_OR LAndExp
   34       | LAndExp

   35 LAndExp: EqExp
   36        | LAndExp TOK_AND EqExp

   37 EqExp: RelExp
   38      | EqExp TOK_EQ RelExp
   39      | EqExp TOK_NEQ RelExp

   40 RelExp: AddExp
   41       | RelExp RelOp AddExp

   42 AddExp: MulExp
   43       | AddExp AddOp MulExp

   44 MulExp: UnaryExp
   45       | MulExp MulOp UnaryExp

   46 UnaryExp: PrimaryExp
   47         | FuncCall
   48         | UnaryOp UnaryExp

   49 FuncCall: IDENT TOK_LPAREN FuncRParams TOK_RPAREN
   50         | IDENT TOK_LPAREN TOK_RPAREN

   51 PrimaryExp: TOK_LPAREN Exp TOK_RPAREN
   52           | LVal
   53           | Number
   54           | STRING

   55 LVal: LVal TOK_LBRACKET Exp TOK_RBRACKET
   56     | IDENT

   57 FuncDef: TOK_VOID IDENT TOK_LPAREN FuncFParams TOK_RPAREN Block
   58        | TOK_VOID IDENT TOK_LPAREN TOK_RPAREN Block
   59        | BType IDENT TOK_LPAREN FuncFParams TOK_RPAREN Block
   60        | BType IDENT TOK_LPAREN TOK_RPAREN Block

   61 FuncFParams: FuncFParams TOK_COMMA FuncFParam
   62            | FuncFParam

   63 FuncRParams: FuncRParams TOK_COMMA AddExp
   64            | AddExp

   65 FuncFParam: FuncFParamSingle
   66           | FuncFParamArray

   67 FuncFParamSingle: BType IDENT

   68 FuncFParamArray: BType IDENT TOK_LBRACKET TOK_RBRACKET
   69                | FuncFParamArray TOK_LBRACKET Exp TOK_RBRACKET

   70 Block: TOK_LBRACE TOK_RBRACE
   71      | TOK_LBRACE BlockItems TOK_RBRACE

   72 BlockItems: BlockItem
   73           | BlockItems BlockItem

   74 BlockItem: Decl
   75          | Stmt

   76 Stmt: LVal TOK_ASSIGN Exp TOK_SEMICOLON
   77     | Exp TOK_SEMICOLON
   78     | TOK_SEMICOLON
   79     | Block
   80     | IfStmt
   81     | WhileStmt
   82     | BreakStmt
   83     | ContinueStmt
   84     | ReturnStmt

   85 IfStmt: TOK_IF TOK_LPAREN Cond TOK_RPAREN Stmt TOK_ELSE Stmt
   86       | TOK_IF TOK_LPAREN Cond TOK_RPAREN Stmt

   87 ReturnStmt: TOK_RETURN Exp TOK_SEMICOLON
   88           | TOK_RETURN TOK_SEMICOLON

   89 WhileStmt: TOK_WHILE TOK_LPAREN Cond TOK_RPAREN Stmt

   90 BreakStmt: TOK_BREAK TOK_SEMICOLON

   91 ContinueStmt: TOK_CONTINUE TOK_SEMICOLON

   92 Cond: LOrExp

   93 Number: TOK_INT_CONST
   94       | TOK_FLOAT_CONST

   95 AddOp: TOK_PLUS
   96      | TOK_MINUS

   97 MulOp: TOK_MUL
   98      | TOK_DIV
   99      | TOK_MOD

  100 UnaryOp: TOK_PLUS
  101        | TOK_MINUS
  102        | TOK_NOT

  103 RelOp: TOK_GE
  104      | TOK_GEQ
  105      | TOK_LE
  106      | TOK_LEQ

  107 IDENT: TOK_IDENT

  108 STRING: TOK_STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_IDENT <str_val> (258) 107
    TOK_STRING <str_val> (259) 108
    TOK_INT_CONST <int_val> (260) 93
    TOK_FLOAT_CONST <float_val> (261) 94
    TOK_CONST (262) 9
    TOK_INT (263) 7
    TOK_FLOAT (264) 8
    TOK_COMMA (265) 10 12 28 29 61 63
    TOK_SEMICOLON (266) 5 6 76 77 78 87 88 90 91
    TOK_LBRACE (267) 26 27 70 71
    TOK_RBRACE (268) 26 27 70 71
    TOK_LBRACKET (269) 19 20 55 68 69
    TOK_RBRACKET (270) 19 20 55 68 69
    TOK_LPAREN (271) 49 50 51 57 58 59 60 85 86 89
    TOK_RPAREN (272) 49 50 51 57 58 59 60 85 86 89
    TOK_ASSIGN (273) 15 17 23 24 76
    TOK_VOID (274) 57 58
    TOK_IF (275) 85 86
    TOK_ELSE (276) 85
    TOK_WHILE (277) 89
    TOK_BREAK (278) 90
    TOK_CONTINUE (279) 91
    TOK_RETURN (280) 87 88
    TOK_PLUS (281) 95 100
    TOK_MINUS (282) 96 101
    TOK_MUL (283) 97
    TOK_DIV (284) 98
    TOK_MOD (285) 99
    TOK_GE (286) 103
    TOK_GEQ (287) 104
    TOK_LE (288) 105
    TOK_LEQ (289) 106
    TOK_EQ (290) 38
    TOK_NEQ (291) 39
    TOK_AND (292) 36
    TOK_OR (293) 33
    TOK_NOT (294) 102
    "then" (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    CompUnit (42)
        on left: 1 2 3 4
        on right: 0 1 2
    Decl <var_val> (43)
        on left: 5 6
        on right: 1 3 74
    BType <vartype_val> (44)
        on left: 7 8
        on right: 9 11 59 60 67 68
    ConstDecl <var_val> (45)
        on left: 9 10
        on right: 5 10
    VarDecl <var_val> (46)
        on left: 11 12
        on right: 6 12
    VarDef <var_val> (47)
        on left: 13 14
        on right: 11 12
    VarDefSingle <singlevardef_val> (48)
        on left: 15 16
        on right: 13
    VarDefArray <arrayvardef_val> (49)
        on left: 17 18
        on right: 14
    DefArrayBody <arrayvardef_val> (50)
        on left: 19 20
        on right: 17 18 19 24
    ConstDef <var_val> (51)
        on left: 21 22
        on right: 9 10
    ConstDefSingle <singlevardef_val> (52)
        on left: 23
        on right: 21
    ConstDefArray <arrayvardef_val> (53)
        on left: 24
        on right: 22
    InitVal <decl_val> (54)
        on left: 25
        on right: 15 23 29 31
    InitValArray <list> (55)
        on left: 26 27
        on right: 17 24 28 30
    InitValArrayBody <list> (56)
        on left: 28 29 30 31
        on right: 26 28 29
    Exp <decl_val> (57)
        on left: 32
        on right: 19 20 51 55 69 76 77 87
    LOrExp <decl_val> (58)
        on left: 33 34
        on right: 33 92
    LAndExp <decl_val> (59)
        on left: 35 36
        on right: 33 34 36
    EqExp <decl_val> (60)
        on left: 37 38 39
        on right: 35 36 38 39
    RelExp <decl_val> (61)
        on left: 40 41
        on right: 37 38 39 41
    AddExp <decl_val> (62)
        on left: 42 43
        on right: 25 32 40 41 43 63 64
    MulExp <decl_val> (63)
        on left: 44 45
        on right: 42 43 45
    UnaryExp <decl_val> (64)
        on left: 46 47 48
        on right: 44 45 48
    FuncCall <funccall_val> (65)
        on left: 49 50
        on right: 47
    PrimaryExp <decl_val> (66)
        on left: 51 52 53 54
        on right: 46
    LVal <value_val> (67)
        on left: 55 56
        on right: 52 55 76
    FuncDef <funcdef_val> (68)
        on left: 57 58 59 60
        on right: 2 4
    FuncFParams <funcdef_params_val> (69)
        on left: 61 62
        on right: 57 59 61
    FuncRParams <funccall_params_val> (70)
        on left: 63 64
        on right: 49 63
    FuncFParam <var_val> (71)
        on left: 65 66
        on right: 61 62
    FuncFParamSingle <var_val> (72)
        on left: 67
        on right: 65
    FuncFParamArray <var_val> (73)
        on left: 68 69
        on right: 66 69
    Block <block_val> (74)
        on left: 70 71
        on right: 57 58 59 60 79
    BlockItems <blockitems_val> (75)
        on left: 72 73
        on right: 71 73
    BlockItem <stmt_val> (76)
        on left: 74 75
        on right: 72 73
    Stmt <stmt_val> (77)
        on left: 76 77 78 79 80 81 82 83 84
        on right: 75 85 86 89
    IfStmt <if_val> (78)
        on left: 85 86
        on right: 80
    ReturnStmt <return_val> (79)
        on left: 87 88
        on right: 84
    WhileStmt <while_val> (80)
        on left: 89
        on right: 81
    BreakStmt <break_val> (81)
        on left: 90
        on right: 82
    ContinueStmt <continue_val> (82)
        on left: 91
        on right: 83
    Cond <decl_val> (83)
        on left: 92
        on right: 85 86 89
    Number <value_val> (84)
        on left: 93 94
        on right: 53
    AddOp <optype_val> (85)
        on left: 95 96
        on right: 43
    MulOp <optype_val> (86)
        on left: 97 98 99
        on right: 45
    UnaryOp <optype_val> (87)
        on left: 100 101 102
        on right: 48
    RelOp <optype_val> (88)
        on left: 103 104 105 106
        on right: 41
    IDENT <str_val> (89)
        on left: 107
        on right: 15 16 20 23 49 50 56 57 58 59 60 67 68
    STRING <str_val> (90)
        on left: 108
        on right: 54


State 0

    0 $accept: • CompUnit $end

    TOK_CONST  shift, and go to state 1
    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_VOID   shift, and go to state 4

    CompUnit   go to state 5
    Decl       go to state 6
    BType      go to state 7
    ConstDecl  go to state 8
    VarDecl    go to state 9
    FuncDef    go to state 10


State 1

    9 ConstDecl: TOK_CONST • BType ConstDef

    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3

    BType  go to state 11


State 2

    7 BType: TOK_INT •

    $default  reduce using rule 7 (BType)


State 3

    8 BType: TOK_FLOAT •

    $default  reduce using rule 8 (BType)


State 4

   57 FuncDef: TOK_VOID • IDENT TOK_LPAREN FuncFParams TOK_RPAREN Block
   58        | TOK_VOID • IDENT TOK_LPAREN TOK_RPAREN Block

    TOK_IDENT  shift, and go to state 12

    IDENT  go to state 13


State 5

    0 $accept: CompUnit • $end
    1 CompUnit: CompUnit • Decl
    2         | CompUnit • FuncDef

    $end       shift, and go to state 14
    TOK_CONST  shift, and go to state 1
    TOK_INT    shift, and go to state 2
    TOK_FLOAT  shift, and go to state 3
    TOK_VOID   shift, and go to state 4

    Decl       go to state 15
    BType      go to state 7
    ConstDecl  go to state 8
    VarDecl    go to state 9
    FuncDef    go to state 16


State 6

    3 CompUnit: Decl •

    $default  reduce using rule 3 (CompUnit)


State 7

   11 VarDecl: BType • VarDef
   59 FuncDef: BType • IDENT TOK_LPAREN FuncFParams TOK_RPAREN Block
   60        | BType • IDENT TOK_LPAREN TOK_RPAREN Block

    TOK_IDENT  shift, and go to state 12

    VarDef        go to state 17
    VarDefSingle  go to state 18
    VarDefArray   go to state 19
    DefArrayBody  go to state 20
    IDENT         go to state 21


State 8

    5 Decl: ConstDecl • TOK_SEMICOLON
   10 ConstDecl: ConstDecl • TOK_COMMA ConstDef

    TOK_COMMA      shift, and go to state 22
    TOK_SEMICOLON  shift, and go to state 23


State 9

    6 Decl: VarDecl • TOK_SEMICOLON
   12 VarDecl: VarDecl • TOK_COMMA VarDef

    TOK_COMMA      shift, and go to state 24
    TOK_SEMICOLON  shift, and go to state 25


State 10

    4 CompUnit: FuncDef •

    $default  reduce using rule 4 (CompUnit)


State 11

    9 ConstDecl: TOK_CONST BType • ConstDef

    TOK_IDENT  shift, and go to state 12

    DefArrayBody    go to state 26
    ConstDef        go to state 27
    ConstDefSingle  go to state 28
    ConstDefArray   go to state 29
    IDENT           go to state 30


State 12

  107 IDENT: TOK_IDENT •

    $default  reduce using rule 107 (IDENT)


State 13

   57 FuncDef: TOK_VOID IDENT • TOK_LPAREN FuncFParams TOK_RPAREN Block
   58        | TOK_VOID IDENT • TOK_LPAREN TOK_RPAREN Block

    TOK_LPAREN  shift, and go to state 31


State 14

    0 $accept: CompUnit $end •

    $default  accept


State 15

    1 CompUnit: CompUnit Decl •

    $default  reduce using rule 1 (CompUnit)


State 16

    2 CompUnit: CompUnit FuncDef •

    $default  reduce using rule 2 (CompUnit)


State 17

   11 VarDecl: BType VarDef •

    $default  reduce using rule 11 (VarDecl)


State 18

   13 VarDef: VarDefSingle •

    $default  reduce using rule 13 (VarDef)


State 19

   14 VarDef: VarDefArray •

    $default  reduce using rule 14 (VarDef)


State 20

   17 VarDefArray: DefArrayBody • TOK_ASSIGN InitValArray
   18            | DefArrayBody •
   19 DefArrayBody: DefArrayBody • TOK_LBRACKET Exp TOK_RBRACKET

    TOK_LBRACKET  shift, and go to state 32
    TOK_ASSIGN    shift, and go to state 33

    $default  reduce using rule 18 (VarDefArray)


State 21

   15 VarDefSingle: IDENT • TOK_ASSIGN InitVal
   16             | IDENT •
   20 DefArrayBody: IDENT • TOK_LBRACKET Exp TOK_RBRACKET
   59 FuncDef: BType IDENT • TOK_LPAREN FuncFParams TOK_RPAREN Block
   60        | BType IDENT • TOK_LPAREN TOK_RPAREN Block

    TOK_LBRACKET  shift, and go to state 34
    TOK_LPAREN    shift, and go to state 35
    TOK_ASSIGN    shift, and go to state 36

    $default  reduce using rule 16 (VarDefSingle)


State 22

   10 ConstDecl: ConstDecl TOK_COMMA • ConstDef

    TOK_IDENT  shift, and go to state 12

    DefArrayBody    go to state 26
    ConstDef        go to state 37
    ConstDefSingle  go to state 28
    ConstDefArray   go to state 29
    IDENT           go to state 30


State 23

    5 Decl: ConstDecl TOK_SEMICOLON •

    $default  reduce using rule 5 (Decl)


State 24

   12 VarDecl: VarDecl TOK_COMMA • VarDef

    TOK_IDENT  shift, and go to state 12

    VarDef        go to state 38
    VarDefSingle  go to state 18
    VarDefArray   go to state 19
    DefArrayBody  go to state 20
    IDENT         go to state 39


State 25

    6 Decl: VarDecl TOK_SEMICOLON •

    $default  reduce using rule 6 (Decl)


State 26

   19 DefArrayBody: DefArrayBody • TOK_LBRACKET Exp TOK_RBRACKET
   24 ConstDefArray: DefArrayBody • TOK_ASSIGN InitValArray

    TOK_LBRACKET  shift, and go to state 32
    TOK_ASSIGN    shift, and go to state 40


State 27

    9 ConstDecl: TOK_CONST BType ConstDef •

    $default  reduce using rule 9 (ConstDecl)


State 28

   21 ConstDef: ConstDefSingle •

    $default  reduce using rule 21 (ConstDef)


State 29

   22 ConstDef: ConstDefArray •

    $default  reduce using rule 22 (ConstDef)


State 30

   20 DefArrayBody: IDENT • TOK_LBRACKET Exp TOK_RBRACKET
   23 ConstDefSingle: IDENT • TOK_ASSIGN InitVal
